[tool.poetry]
name = "call-graph"
version = "0.0.1"
description = "`call-graph` is a package for viewing call graph."
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
homepage = "https://github.com/SaitoTsutomu/call-graph"
classifiers = [
   "Development Status :: 1 - Planning",
   "License :: OSI Approved :: Python Software Foundation License",
   "Programming Language :: Python",
   "Topic :: Software Development",
   "Topic :: Scientific/Engineering",
]
license = "PSFL"
readme = "README.rst"

[tool.poetry.scripts]
call-graph = "call_graph:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
