[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`call-graph` is a package for viewing call graph."
homepage = "https://github.com/SaitoTsutomu/call-graph"
license = "MIT"
name = "call-graph"
readme = "README.rst"
version = "0.1.0"

[tool.poetry.scripts]
call-graph = "call_graph:main"

[tool.poetry.dependencies]
more-itertools = "^10.4"
python = "^3.12"

[tool.poetry.dev-dependencies]
mypy = "^1.11"
pytest = "^8.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
